k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  ingressClassName: nginx
  rules:
    - host: posts.com
      http:
        paths:

          - path: /
            pathType: Prefix
            backend: 
              service:
                name: client-blog-service
                port: 
                  number: 3000


          - path: /api/comments
            pathType: Prefix
            backend: 
              service:
                name: comments-service
                port:
                  number: 4001


          - path: /api/posts
            pathType: Prefix
            backend: 
              service:
                name: posts-service
                port: 
                  number: 4000
        

          - path: /api/postsWithComments
            pathType: Prefix
            backend: 
              service:
                name: posts-with-comments-service
                port: 
                  number: 4002
